{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 51,
  "lineage": "38bba7cd-8e04-27a3-a006-2c197109ac4b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "alb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052cef05d01020f1d",
            "arn": "arn:aws:ec2:ap-south-1:565265870566:instance/i-0b694ac7b41091e2f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b694ac7b41091e2f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Apache",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08efa31c82979a0ff",
            "private_dns": "ip-172-31-32-186.ap-south-1.compute.internal",
            "private_ip": "172.31.32.186",
            "public_dns": "ec2-13-127-99-9.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.99.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065cf2909cee34748",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5da5e5e4a7282b5",
            "tags": {
              "Company": "Testing",
              "Name": "ALB",
              "Team": "Dev"
            },
            "tags_all": {
              "Company": "Testing",
              "Name": "ALB",
              "Team": "Dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e40fc8942a6081f"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "alb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052cef05d01020f1d",
            "arn": "arn:aws:ec2:ap-south-1:565265870566:instance/i-0a39d0e22115caa55",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a39d0e22115caa55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Apache",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a3956f2f776812a",
            "private_dns": "ip-172-31-5-28.ap-south-1.compute.internal",
            "private_ip": "172.31.5.28",
            "public_dns": "ec2-3-110-47-223.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.47.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e149d17ef26f1202",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079512d0ab954a691",
            "tags": {
              "Company": "Testing",
              "Name": "ALB1",
              "Team": "Dev"
            },
            "tags_all": {
              "Company": "Testing",
              "Name": "ALB1",
              "Team": "Dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e40fc8942a6081f"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:loadbalancer/app/test-lb-tf/78ec4cf7730bf740",
            "arn_suffix": "app/test-lb-tf/78ec4cf7730bf740",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-289192336.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:loadbalancer/app/test-lb-tf/78ec4cf7730bf740",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0970445d2c9c76900"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-079512d0ab954a691"
              },
              {
                "subnet_id": "subnet-0b5da5e5e4a7282b5"
              }
            ],
            "subnets": [
              "subnet-079512d0ab954a691",
              "subnet-0b5da5e5e4a7282b5"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-08b833ab8c86686ed",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:listener/app/test-lb-tf/78ec4cf7730bf740/f7a5ce092f830408",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:targetgroup/tf-example-lb-tg/6bab4482b87c7150",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:listener/app/test-lb-tf/78ec4cf7730bf740/f7a5ce092f830408",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:loadbalancer/app/test-lb-tf/78ec4cf7730bf740",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.target-1",
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:targetgroup/tf-example-lb-tg/6bab4482b87c7150",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:listener-rule/app/test-lb-tf/78ec4cf7730bf740/f7a5ce092f830408/ab681bfdb63cd052",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/cricket/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:listener-rule/app/test-lb-tf/78ec4cf7730bf740/f7a5ce092f830408/ab681bfdb63cd052",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:listener/app/test-lb-tf/78ec4cf7730bf740/f7a5ce092f830408",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_listener.listener",
            "aws_lb_target_group.target-1",
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:targetgroup/tf-example-lb-tg/6bab4482b87c7150",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:listener-rule/app/test-lb-tf/78ec4cf7730bf740/f7a5ce092f830408/c821fc3d0df31c20",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/football/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:listener-rule/app/test-lb-tf/78ec4cf7730bf740/f7a5ce092f830408/c821fc3d0df31c20",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:listener/app/test-lb-tf/78ec4cf7730bf740/f7a5ce092f830408",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_listener.listener",
            "aws_lb_target_group.target-1",
            "aws_lb_target_group.target-2",
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:targetgroup/tf-example-lb-tg/6bab4482b87c7150",
            "arn_suffix": "targetgroup/tf-example-lb-tg/6bab4482b87c7150",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:targetgroup/tf-example-lb-tg/6bab4482b87c7150",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08b833ab8c86686ed"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:targetgroup/tf-example-lb-tg/6bab4482b87c7150",
            "arn_suffix": "targetgroup/tf-example-lb-tg/6bab4482b87c7150",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:targetgroup/tf-example-lb-tg/6bab4482b87c7150",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08b833ab8c86686ed"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test1_cric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:targetgroup/tf-example-lb-tg/6bab4482b87c7150-20220104045613709200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:targetgroup/tf-example-lb-tg/6bab4482b87c7150",
            "target_id": "i-0a39d0e22115caa55"
          },
          "dependencies": [
            "aws_instance.alb2",
            "aws_lb_target_group.target-2",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test_foot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:targetgroup/tf-example-lb-tg/6bab4482b87c7150-20220104045604307800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:565265870566:targetgroup/tf-example-lb-tg/6bab4482b87c7150",
            "target_id": "i-0b694ac7b41091e2f"
          },
          "dependencies": [
            "aws_instance.alb1",
            "aws_lb_target_group.target-1",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:565265870566:security-group/sg-0970445d2c9c76900",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0970445d2c9c76900",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "565265870566",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b833ab8c86686ed"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:565265870566:security-group/sg-09e40fc8942a6081f",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e40fc8942a6081f",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.110.170.86/32"
                ],
                "description": "for Admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "for Admin",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0970445d2c9c76900"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2",
            "name_prefix": "",
            "owner_id": "565265870566",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b833ab8c86686ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    }
  ]
}